(saterfiel) adding getDoctorSpecialities api
